--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -1,4 +1,30 @@
-<div class="container">
-  FORMA
+<div class="container mt-4">
+  <form >
+    <div class="form-group row col-5 mx-auto">
+      <label for="region">Ваш регион: </label>
+      <input type="text" class="form-control" id="region"
+      placeholder='' required/>
+    </div>
+    <div class="form-group row col-5 mx-auto">
+      <label for="status">Статус соикателя: </label>
+      <select  class="form-control"id="status">
+        <option value="1">С другой специальности</option>
+        <option value="2">Окончил вуз</option>
+      </select>
+    </div>
+    <div class="form-group row col-5 mx-auto">
+      <label for="university">Ваш ВУЗ: </label>
+      <input type="text" class="form-control" id="university"
+             placeholder='' required/>
+    </div>
+    <div class="form-group row col-5 mx-auto">
+      <label for="vocation">Ваша специальность: </label>
+      <input type="text" class="form-control" id="vocation"
+             placeholder='' required/>
+      <div class="form-group btn btn-primary btn-lg mt-4 mx-auto">
+        Отправить
+      </div>
+    </div>
 
+  </form>
 </div>
