--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -83,9 +83,9 @@
 
 </head>
 <nav class="navbar navbar-dark bg-primary">
-  <a class="navbar-brand" href="#">Orpheus</a>
-  <a class="navbar-brand" href="/form">Заполнить форму</a>
-  <a class="navbar-brand" href="">Статистика</a>
+  <a class="navbar-brand">Orpheus</a>
+  <a class="navbar-brand" routerLink="/form">Заполнить форму</a>
+  <a class="navbar-brand" routerLink="">Статистика</a>
   <!-- Navbar content -->
 </nav>
 <body>
