--- a/src/app/components/statistics/statistics.component.html
+++ b/src/app/components/statistics/statistics.component.html
@@ -29,7 +29,7 @@
         <canvas></canvas>
         <p class="mx-2">
           Количество IT компаний, относительно остальных компаний, составляет {{curRegion.ITCompany}} процентов. <br><br>
-          {{curRegion.ITworker}} процентов среди всего занятого населения занято в IT компаниях.<br><br>
+          {{curRegion.ITworker}} процентов среди всего населения занято в IT компаниях.<br><br>
           Среди вакансий {{curRegion.ITVacancy}} процентов составляют вакансии по IT специальностям.
         </p>
       </div>
