--- a/src/app/components/statistics/statistics.component.html
+++ b/src/app/components/statistics/statistics.component.html
@@ -14,7 +14,7 @@
       </div>
       <div class="row">
         <div>IT Выпускников<br>{{curRegion.ITgraduate}}%</div>
-        <div>Медиана зарплат<br>{{curRegion.medianZP}}</div>
+        <div>Медиана зарплат<br>{{curRegion.medianZP}}%</div>
         <div>Вклад IT в ВВП Региона<br>{{curRegion.impactITinGRP}}%</div>
       </div>
     </div>
