--- a/src/app/components/statistics/statistics.component.html
+++ b/src/app/components/statistics/statistics.component.html
@@ -25,9 +25,9 @@
       <div id="graph-count">
         <canvas></canvas>
         <p class="mx-2">
-          Количество IT компаний, относительно остальных компаний, составляет {{curRegion.ITCompany}} процентов. <br><br>
+          Количество IT компаний, относительно остальных, составляет {{curRegion.ITCompany}} процентов. <br><br>
           {{curRegion.ITworker}} процентов среди всего населения занято в IT компаниях.<br><br>
-          Среди вакансий {{curRegion.ITVacancy}} процентов составляют вакансии по IT специальностям.
+          Среди вакансий {{curRegion.ITVacancy}} процент занимают IT специальности.
         </p>
       </div>
       <div id="graph-economics">
